--- a/sass/site/_common.scss
+++ b/sass/site/_common.scss
@@ -5,8 +5,10 @@ $secondary-color: #ef5350;
 $text-color: rgba(#000,.9);
 $gray-color: rgba(0, 0, 0, 0.1);
 
+
+
 .imp-level-1 {
-	background-image: inline-image("imp-level-1.svg")
+	background-image: inline-image("./imp-level-1.svg")
 }
 
 .imp-level-2 {
@@ -18,39 +20,12 @@ $gray-color: rgba(0, 0, 0, 0.1);
 }
 
 
-@mixin sidebar-animation($property) {
-	@include transition-property($property);
-	@include transition-duration(.4s);
-	@include transition-timing-function(cubic-bezier(0.4, 0, 0.2, 1));
-}
-
-
-
 .hide {
 	display: none !important;
 }
 
 
 * { box-sizing: border-box; }
-
-
-/*@media #{$large-and-up} {
-	::-webkit-scrollbar {
-		width: 8px;
-	}
-	::-webkit-scrollbar-track {
-		background-color: rgba(#000,.2);;
-		//border-left: 1px solid #ccc;
-	}
-	::-webkit-scrollbar-thumb {
-		background-color: rgba(#000,.3);
-	}
-	::-webkit-scrollbar-thumb:hover {
-		background-color: rgba(#000,.4);
-	}
-}*/
-
-
 
 
 html {
@@ -86,9 +61,7 @@ pre {
 	left: 0;
 	z-index: 2;
 	background: #000;
-	@include transition-property(opacity);
-	@include transition-duration(.4s);
-	@include transition-timing-function(cubic-bezier(0.4, 0, 0.2, 1));
+	transition: opacity 0.4s ease-in-out;
 }
 
 .prettyprint {
