--- a/sass/site/_promo.scss
+++ b/sass/site/_promo.scss
@@ -1,8 +1,6 @@
 #promo {
 	background-color: #fff;
-	//height: 2000px;
 	margin: 0;
-	//color: #fff;
 	width: 100%;
 	text-align: center;
 	font-weight: 300;
@@ -288,20 +286,20 @@
 
 
 		.social-twitter::before {
-			background-image: inline-image('icons/twitter.svg');
+			background-image: inline-image('twitter.svg');
 		}
 
 		.social-vk::before {
-			background-image: inline-image('icons/vk.svg');
+			background-image: inline-image('vk.svg');
 		}
 
 		.social-forum::before {
-			background-image: inline-image('icons/forum.svg');
+			background-image: inline-image('forum.svg');
 		}
 
 		.social-gitter::before {
 			margin-top: 3px;
-			background-image: inline-image('icons/gitter.svg');
+			background-image: inline-image('gitter.svg');
 		}
 
 		.social-fb {
@@ -309,7 +307,7 @@
 		}
 
 		.social-fb::before {
-			background-image: inline-image('icons/fb.svg');
+			background-image: inline-image('fb.svg');
 		}
 	}
 }
