--- a/sass/site/_typedef.scss
+++ b/sass/site/_typedef.scss
@@ -4,25 +4,25 @@
 	opacity: 0;
 	top: -100%;
 	max-height: 80%;
-	
-	@include transition-property(#{"opacity,top"});
-	@include transition-duration(.4s);
-	@include transition-timing-function(cubic-bezier(0.4, 0, 0.2, 1));
-	
+
+	transition-property: opacity, top;
+	transition-duration: 0.4s;
+	transition-timing-function: ease-in-out;
+
 	&.shown {
 		opacity: 1;
 		top: 10%;
 	}
-	
+
 	@media #{$small-and-down} {
 		padding: 14px;
 	}
-	
-	
-} 
+
+
+}
 
 
 .typedef-overlay {
 	@extend .overlay;
 	opacity: .5;
-} 
+}
