started documenting calc method

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,7 +4,7 @@
 }
 
 @import "materialize";
-@import "../node_modules/highlight.js/styles/default.css";
+@import "../node_modules/highlight.js/styles/tomorrow.css";
 @import "site/common";
 @import "site/promo";
 @import "site/main";
