--- a/sass/site/_main.scss
+++ b/sass/site/_main.scss
@@ -258,11 +258,15 @@ main {
 
 
 	div.summary {
+		margin-bottom: 1rem;
+		
 		&::before {
 			content: '\2014';
 			float: left;
 			padding-right: 4px;
 		}
+
+
 	}
 
 	.event {
