--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,8 +3,10 @@
     padding: 0;
 }
 
-@import "materialize";
+
 @import "../node_modules/highlight.js/styles/tomorrow.css";
+@import "../node_modules/github-embed/npm/css/github-embed.css";
+@import "materialize";
 @import "site/common";
 @import "site/promo";
 @import "site/main";
