add Patreon link, update Donate section, remove all sponsors

--- a/sass/site/_common.scss
+++ b/sass/site/_common.scss
@@ -126,15 +126,6 @@ summary {
 }
 
 a[href*="//"] {
-	/*@extend .mdi, .mdi-action-open-in-new;
-	&::before {
-		vertical-align: middle;
-		margin-right: .3em;
-		font-size: 1.2em;
-		line-height: 1;
-		font-weight: normal;
-	}*/
-
 	&::after {
 		content: '\2197';
 	    font-weight: normal;
@@ -144,6 +135,10 @@ a[href*="//"] {
 	    font-size: .8em;
 	    margin-bottom: .2em;
 	    margin-left: .3em;
+	}
+
+	&.no-arrow::after {
+		content: none;
 	}
 }
 
