--- a/sass/site/_common.scss
+++ b/sass/site/_common.scss
@@ -148,3 +148,7 @@ h1, h2, h3, h4, h5, h6 {}
 body .gitter-open-chat-button {
 	background-color: #8BC34A;
 }
+
+body .gitter-chat-embed {
+	border: 0;
+}
