--- a/sass/site/_common.scss
+++ b/sass/site/_common.scss
@@ -150,6 +150,10 @@ body .gitter-open-chat-button {
 	border-top-left-radius: 2px;
 	border-top-right-radius: 2px;
 
+	@media #{$small-and-down} {
+		padding: 0.5em 1em;
+	}
+
 	&:hover {
 		background-color: #71a437;
 	}
