--- a/sass/site/_common.scss
+++ b/sass/site/_common.scss
@@ -151,7 +151,7 @@ body .gitter-open-chat-button {
 	border-top-right-radius: 2px;
 
 	@media #{$small-and-down} {
-		padding: 0.5em 1em;
+		display: none;
 	}
 
 	&:hover {
