fix: Some updates per Seemple.js

--- a/sass/site/_promo.scss
+++ b/sass/site/_promo.scss
@@ -34,13 +34,8 @@
 		max-width: 90%;
 	}
 
-	.mk-logo-seemple {
-		height: 133px;
-	}
-
-	.mk-logo-text {
+	.logo-seemple {
 		height: 100px;
-		margin-left: 30px;
 	}
 
 	@media #{$medium-and-down} {
